--- a/srid.html
+++ b/srid.html
@@ -63,8 +63,8 @@
 <body>
     <div class="header">
         <img src="https://www.cmu.edu/brand/downloads/assets/images/wordmarks-600x600-min.jpg" alt="CMU Logo"
-            style="height: 50px;">
-        <h1>Neha Suresh <br />
+            style="height: 50px; float: right;">
+        <h1>Scott Chen <br />
             Master's Program Projects Showcase</h1>
     </div>
     <div class="content">
