feat: google analytics

--- a/srid.html
+++ b/srid.html
@@ -109,13 +109,13 @@
     </div>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7XD5CQH1CR"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q66L9VE2SE"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-7XD5CQH1CR');
+        gtag('config', 'G-Q66L9VE2SE');
     </script>
 </body>
 
